(library
 (name zarith_ppx)
 (public_name zarith-ppx)
 (synopsis "Zarith PPX syntax extension")
 (modules ppx)
 (libraries
   compiler-libs.common
   ocaml-migrate-parsetree
   zarith
   str)
 (ppx_runtime_libraries zarith)
 (kind ppx_rewriter)
)

(alias
 (name runtest)
 (deps README.md)
 (action (progn
          (run mdx test %{deps})
          (diff? %{deps} %{deps}.corrected))))
